Restructure to work with ZEIT's now
* Whole directory uploaded and docker image built from it.
* Run "cron" job every 5 mins to check if daily events list update is
required - necessary to run every 5 mins in case instance is frozen.
* Otherwise serve static html.

--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
 		href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.7.0/fullcalendar.min.css' />
 	<link
 		rel='stylesheet'
-		href='http://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.css' />
+		href='https://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.css' />
 	<script
 		src="https://code.jquery.com/jquery-3.2.1.min.js"
 		integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -29,7 +29,7 @@
 		src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.7.0/fullcalendar.min.js'
 	></script>
 	<script
-		src="http://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.js"
+		src="https://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.js"
 	></script>
 		<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/twix.js/1.2.1/twix.min.js"
@@ -71,7 +71,7 @@
 			margin: 7px;
 			padding: 7px;
 			box-shadow: 0 1px 2px rgba(0,0,0,0.3);
-			border-radius: 3px;			
+			border-radius: 3px;
 		}
 	</style>
 	<script>
