--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="icon" href="/favicon.ico" />
+	<link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 	<title>Canterbury Events Calendar</title>
 	<link
 		rel='stylesheet'
@@ -188,7 +189,7 @@
 	<footer class="footer">
 		<span class="valign-fix"></span>
 		<span class="text-muted valign-middle">
-			Events scraped from <a href="http://www.canterbury.co.uk">www.canterbury.co.uk</a> 
+			Events scraped from <a href="http://www.canterbury.co.uk">www.canterbury.co.uk</a>
 			&nbsp;&bull;&nbsp;
 			Source available <a href='https://github.com/feltech/CanterburyEvents'>on github</a>
 		</span>
