Fix all-day events

--- a/static/index.html
+++ b/static/index.html
@@ -116,7 +116,7 @@
 						if (view.name === "month")
 							return;
 						var containerCss = {},
-								$allDay = (element).find('.fc-day-grid');
+							$allDay = element.find('.fc-day-grid');
 						containerCss['max-height'] = $(window).height() / 2;
 						containerCss['overflow-y'] = "auto";
 						$allDay.css(containerCss);
